kubernetes/operations/docker-registry/registry.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: docker-registry
  labels:
    app: docker-registry
spec:
  replicas: 1
  serviceName: "docker-registry"
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      volumes:
        - emptyDir: {}
          name: certs
      containers:
        - name: docker-registry
          image: registry:2.7.1
          imagePullPolicy: Always 
          ports:
            - containerPort: 443
              name: registry
          volumeMounts:
            - mountPath: "/var/lib/registry"
              name: docker-registry-data
            - mountPath: "/tmp"
              name: certs
        - name: registry-ui
          image: joxit/docker-registry-ui:latest
          imagePullPolicy: Always 
          ports:
            - containerPort: 80
              name: ui

  volumeClaimTemplates:
    - metadata:
        name: docker-registry-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "nfs-client"
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
spec:
  selector:
    app: docker-registry
  ports:
    - name: registry
      protocol: TCP
      port: 443
      targetPort: 443
    - name: registry-ui
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: docker-registry-auth
spec:
  basicAuth:
    secret: docker-registry-htpasswd
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: docker-registry

spec:
  entryPoints:
    - web
  routes:
  - match: Host(`docker.eniworks.net`)
    kind: Rule
    services:
    - name: docker-registry
      port: 80
      passHostHeader: true
  - match: Host(`docker.eniworks.net`) && PathPrefix(`/v2`)
    kind: Rule
    services:
    - name: docker-registry
      port: 443
      passHostHeader: true
    middlewares:
    - name: docker-registry-auth
